﻿
Planned
	- Kiviat diagram

1.0.4 - 2011-02-22
    - added license text into GUI
    - colored items according to their metrics
	- double clicking on one item opens it in notepad++ at the right line (if notepad++ detected)
