@@ -98,6 +98,11 @@
     <Compile Include="ParserState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResultCollector.cs" />
+    <Compile Include="Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="Statistics.cs" />
     <Compile Include="TokenClass.cs" />
   </ItemGroup>
@@ -106,6 +111,7 @@
     <Content Include="Reference.cpp">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="ReleaseNotes.txt" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Controls\AboutBox.resx">
@@ -120,6 +126,10 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="Properties\app.manifest" />
+    <None Include="Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
