@@ -1,3 +1,27 @@
 <?xml version="1.0"?>
 <configuration>
-<startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
+<configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <section name="ACQC.Metrics.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+</configSections>
+<startup><supportedRuntime version="v2.0.50727"/></startup><userSettings>
+        <ACQC.Metrics.Settings>
+            <setting name="Editor" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="width" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="height" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="xpos" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="ypos" serializeAs="String">
+                <value>0</value>
+            </setting>
+        </ACQC.Metrics.Settings>
+    </userSettings>
+</configuration>
